# qbey

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
qbey/: Cargo.toml
qbey-mysql/: Cargo.toml  README.md
qbey-mysql/src/: delete.rs  delete_tests.rs  insert.rs  lib.rs  select.rs  select_tests.rs  update.rs  update_tests.rs
qbey-mysql/tests/: sqlx_delete.rs  sqlx_insert.rs  sqlx_mysql.rs  sqlx_select.rs  sqlx_update.rs
qbey/benches/: query_bench.rs
qbey/src/: column.rs  delete.rs  insert.rs  join.rs  lib.rs  query.rs  raw_sql.rs  schema.rs  update.rs  value.rs  where_clause.rs
qbey/tests/: delete_test.rs  dialect_test.rs  insert_struct_test.rs  insert_test.rs  into_sql_test.rs  join_test.rs  postgres_test.rs  rusqlite_test.rs  schema_test.rs  select_test.rs  select_window_test.rs  sqlx_mysql.rs  sqlx_sqlite.rs  subquery_test.rs  tokio_postgres_test.rs  union_test.rs  update_test.rs  where_test.rs
scripts/: bump-version.sh
sqipe/: Cargo.toml
sqipe-bigquery/: README.md
sqipe-bigquery/src/: lib.rs
sqipe-mysql/: Cargo.toml  README.md
sqipe-mysql/src/: lib.rs
sqipe-mysql/tests/: sqlx_mysql.rs
sqipe-postgresql/: README.md
sqipe-postgresql/src/: lib.rs
sqipe/src/: column.rs  delete.rs  join.rs  lib.rs  query.rs  tree.rs  update.rs
sqipe/src/builder/: mod.rs  pipe.rs  standard.rs
sqipe/src/renderer/: mod.rs  pipe.rs  standard.rs  update.rs
sqipe/src/tree/: mod.rs
sqipe/tests/: delete_test.rs  join_test.rs  postgres_test.rs  rusqlite_test.rs  select_test.rs  sqlx_sqlite.rs  tokio_postgres_test.rs  update_test.rs
(+17 files in other folders)
