[package]
name = "sqipe"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]

[dev-dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.32" }

[features]
test-sqlx = []
test-rusqlite = []
full = ["test-sqlx", "test-rusqlite"]
